--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">itfest</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="onoff">Online/Offline</string>
+    <string name="darkmode">Dark Mode</string>
+    <string name="settings">SETTINGS</string>
+    <string name="change">Change Signature</string>
 </resources>
